# ny-taxi-dtc

./: .gitignore  README.md  env.example  main.py  pyproject.toml  requirements.txt
.devcontainer/: .gitignore  Dockerfile  docker-compose.yml  requirements.txt
.devcontainer/airflow/: airflow.cfg  mongo.py
.devcontainer/airflow/dags/: bash_dag.py
.devcontainer/airflow/db/: taxi.duckdb
.devcontainer/scripts/: setup.sh
db/: taxi.duckdb
scripts/: pg.sql  setup.sh
src/: ingest_data_web.py  mongo.py
src/utils/: duck_db.py  postgres_db.py
